@@ -23,17 +23,21 @@ import com.google.gson.reflect.TypeToken;
 import com.google.gson.stream.JsonReader;
 import io.ballerina.compiler.api.SemanticModel;
 import io.ballerina.compiler.api.symbols.ModuleSymbol;
-import io.ballerina.compiler.api.symbols.ServiceDeclarationSymbol;
+import io.ballerina.compiler.api.symbols.Qualifier;
 import io.ballerina.compiler.api.symbols.Symbol;
 import io.ballerina.compiler.api.symbols.TypeReferenceTypeSymbol;
+import io.ballerina.compiler.api.symbols.VariableSymbol;
+import io.ballerina.compiler.syntax.tree.ExplicitNewExpressionNode;
 import io.ballerina.compiler.syntax.tree.ExpressionNode;
 import io.ballerina.compiler.syntax.tree.FunctionDefinitionNode;
 import io.ballerina.compiler.syntax.tree.ListenerDeclarationNode;
 import io.ballerina.compiler.syntax.tree.ModulePartNode;
+import io.ballerina.compiler.syntax.tree.NameReferenceNode;
 import io.ballerina.compiler.syntax.tree.Node;
 import io.ballerina.compiler.syntax.tree.NodeList;
 import io.ballerina.compiler.syntax.tree.NonTerminalNode;
 import io.ballerina.compiler.syntax.tree.QualifiedNameReferenceNode;
+import io.ballerina.compiler.syntax.tree.SeparatedNodeList;
 import io.ballerina.compiler.syntax.tree.ServiceDeclarationNode;
 import io.ballerina.compiler.syntax.tree.SimpleNameReferenceNode;
 import io.ballerina.compiler.syntax.tree.SyntaxKind;
@@ -102,6 +106,7 @@ import static io.ballerina.servicemodelgenerator.extension.Utils.expectsTriggerB
 import static io.ballerina.servicemodelgenerator.extension.Utils.filterTriggers;
 import static io.ballerina.servicemodelgenerator.extension.Utils.getFunction;
 import static io.ballerina.servicemodelgenerator.extension.Utils.getFunctionSignature;
+import static io.ballerina.servicemodelgenerator.extension.Utils.getImportStmt;
 import static io.ballerina.servicemodelgenerator.extension.Utils.getListenerExpression;
 import static io.ballerina.servicemodelgenerator.extension.Utils.getPath;
 import static io.ballerina.servicemodelgenerator.extension.Utils.getResourceFunctionModel;
@@ -151,6 +156,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         return null;
     }
 
+    /**
+     * Get the compatible listeners for the given module.
+     *
+     * @param request Listener discovery request
+     * @return {@link ListenerDiscoveryResponse} of the listener discovery response
+     */
     @JsonRequest
     public CompletableFuture<ListenerDiscoveryResponse> getListeners(ListenerDiscoveryRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -161,14 +172,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 Module module = currentPackage.module(ModuleName.from(currentPackage.packageName()));
                 ModuleId moduleId = module.moduleId();
                 SemanticModel semanticModel = currentPackage.getCompilation().getSemanticModel(moduleId);
-                Optional<Document> document = this.workspaceManager.document(filePath);
-                if (document.isEmpty()) {
-                    return new ListenerDiscoveryResponse();
-                }
-                SyntaxTree syntaxTree = document.get().syntaxTree();
-                ModulePartNode modulePartNode = syntaxTree.rootNode();
-                List<String> listeners = getCompatibleListeners(request.moduleName(), modulePartNode,
-                        semanticModel);
+                List<String> listeners = getCompatibleListeners(request.moduleName(), semanticModel);
                 return new ListenerDiscoveryResponse(listeners);
             } catch (Throwable e) {
                 return new ListenerDiscoveryResponse(e);
@@ -176,17 +180,23 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
-    private static List<String> getCompatibleListeners(String moduleName, ModulePartNode modulePartNode,
-                                                        SemanticModel semanticModel) {
-        return modulePartNode.members().stream()
-                .filter(member -> member.kind().equals(SyntaxKind.LISTENER_DECLARATION))
-                .map(member -> (ListenerDeclarationNode) member)
-                .filter(listener -> getListenerName(listener, semanticModel).isPresent() &&
-                        getListenerName(listener, semanticModel).get().equals(moduleName))
-                .map(listener -> listener.variableName().text().trim())
+    private static List<String> getCompatibleListeners(String moduleName, SemanticModel semanticModel) {
+        return semanticModel.moduleSymbols().stream()
+                .filter(symbol -> symbol instanceof VariableSymbol)
+                .map(symbol -> (VariableSymbol) symbol)
+                .filter(variableSymbol -> variableSymbol.qualifiers().contains(Qualifier.LISTENER))
+                .filter(variableSymbol -> variableSymbol.typeDescriptor().getModule().isPresent() && variableSymbol
+                        .typeDescriptor().getModule().get().id().moduleName().equals(moduleName))
+                .map(variableSymbol -> variableSymbol.getName().orElse(""))
                 .toList();
     }
 
+    /**
+     * Get the listener model template for the given module.
+     *
+     * @param request Listener model request
+     * @return {@link ListenerModelResponse} of the listener model response
+     */
     @JsonRequest
     public CompletableFuture<ListenerModelResponse> getListenerModel(ListenerModelRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -200,6 +210,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to add a listener to the given module.
+     *
+     * @param request Listener source request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> addListener(ListenerSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -216,15 +232,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
 
                 Listener listener = request.listener();
                 String listenerDeclaration = listener.getDeclaration();
-                TextEdit listenerEdit = new TextEdit(Utils.toRange(lineRange.endLine()),
-                        System.lineSeparator() + listenerDeclaration);
                 if (!importExists(node, listener.getOrgName(), listener.getModuleName())) {
-                    String importText = String.format("%simport %s/%s;%s", System.lineSeparator(),
-                            listener.getOrgName(), listener.getModuleName(), System.lineSeparator());
-                    TextEdit importEdit = new TextEdit(Utils.toRange(lineRange.startLine()), importText);
-                    edits.add(importEdit);
+                    String importText = getImportStmt(listener.getOrgName(), listener.getModuleName());
+                    edits.add(new TextEdit(Utils.toRange(lineRange.startLine()), importText));
                 }
-                edits.add(listenerEdit);
+                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()),
+                        ServiceModelGeneratorConstants.LINE_SEPARATOR + listenerDeclaration));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
                 return new CommonSourceResponse(e);
@@ -232,6 +245,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the service model template for the given module.
+     *
+     * @param request Service model request
+     * @return {@link ServiceModelResponse} of the service model response
+     */
     @JsonRequest
     public CompletableFuture<ServiceModelResponse> getServiceModel(ServiceModelRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -254,17 +273,16 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 }
                 SyntaxTree syntaxTree = document.get().syntaxTree();
                 ModulePartNode modulePartNode = syntaxTree.rootNode();
-                List<String> listenersList = getCompatibleListeners(request.moduleName(), modulePartNode,
-                        semanticModel);
+                List<String> listenersList = getCompatibleListeners(request.moduleName(), semanticModel);
                 if (Objects.nonNull(request.listenerName())) {
                     listener.addValue(request.listenerName());
                     removeAlreadyDefinedServiceTypes(serviceModel, request.listenerName(), modulePartNode);
                 }
                 if (!listenersList.isEmpty()) {
-                    if (request.moduleName().equals("kafka")) {
-                        listener.setValueType("SINGLE_SELECT");
+                    if (request.moduleName().equals(ServiceModelGeneratorConstants.KAFKA)) {
+                        listener.setValueType(ServiceModelGeneratorConstants.SINGLE_SELECT_VALUE);
                     } else {
-                        listener.setValueType("MULTIPLE_SELECT");
+                        listener.setValueType(ServiceModelGeneratorConstants.MULTIPLE_SELECT_VALUE);
                     }
                     listener.setItems(listenersList);
                 }
@@ -303,6 +321,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to add a service to the given module.
+     *
+     * @param request Service source request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> addService(ServiceSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -329,15 +353,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 }
 
                 String serviceDeclaration = getServiceDeclarationNode(service);
-                TextEdit serviceEdit = new TextEdit(Utils.toRange(lineRange.endLine()),
-                        System.lineSeparator() + serviceDeclaration);
                 if (!importExists(node, service.getOrgName(), service.getModuleName())) {
-                    String importText = String.format("%simport %s/%s;%s", System.lineSeparator(), service.getOrgName(),
-                            service.getModuleName(), System.lineSeparator());
-                    TextEdit importEdit = new TextEdit(Utils.toRange(lineRange.startLine()), importText);
-                    edits.add(importEdit);
+                    String importText = Utils.getImportStmt(service.getOrgName(), service.getModuleName());
+                    edits.add(new TextEdit(Utils.toRange(lineRange.startLine()), importText));
                 }
-                edits.add(serviceEdit);
+                edits.add(new TextEdit(Utils.toRange(lineRange.endLine()),
+                        ServiceModelGeneratorConstants.LINE_SEPARATOR + serviceDeclaration));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
                 return new CommonSourceResponse(e);
@@ -345,6 +366,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Find matching trigger models for the given request.
+     *
+     * @param request Trigger list request
+     * @return {@link TriggerListResponse} of the trigger list response
+     */
     @JsonRequest
     public CompletableFuture<TriggerListResponse> getTriggerModels(TriggerListRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -357,6 +384,11 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the http service model template.
+     *
+     * @return {@link ResourceModelResponse} of the resource model response
+     */
     @JsonRequest
     public CompletableFuture<ResourceModelResponse> getHttpResourceModel() {
         return CompletableFuture.supplyAsync(() -> {
@@ -370,6 +402,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to add a resource function to a service.
+     *
+     * @param request Function source request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> addResource(FunctionSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -393,16 +431,19 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 ServiceDeclarationNode serviceNode = (ServiceDeclarationNode) node;
                 LineRange serviceEnd = serviceNode.closeBraceToken().lineRange();
                 List<String> statusCodeResponses = new ArrayList<>();
-                String functionDefinition = System.lineSeparator() +
-                        "\t" + getFunction(request.function(), statusCodeResponses).replace(System.lineSeparator(),
-                        System.lineSeparator() + "\t") + System.lineSeparator();
+                String functionDefinition = ServiceModelGeneratorConstants.LINE_SEPARATOR +
+                        "\t" + getFunction(request.function(), statusCodeResponses)
+                        .replace(ServiceModelGeneratorConstants.LINE_SEPARATOR,
+                        ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t")
+                        + ServiceModelGeneratorConstants.LINE_SEPARATOR;
                 List<TextEdit> textEdits = new ArrayList<>();
                 textEdits.add(new TextEdit(Utils.toRange(serviceEnd.startLine()), functionDefinition));
                 String statusCodeResEdits = statusCodeResponses.stream()
-                        .collect(Collectors.joining(System.lineSeparator() + System.lineSeparator()));
+                        .collect(Collectors.joining(ServiceModelGeneratorConstants.LINE_SEPARATOR
+                                + ServiceModelGeneratorConstants.LINE_SEPARATOR));
                 if (!statusCodeResEdits.isEmpty()) {
                     textEdits.add(new TextEdit(Utils.toRange(serviceEnd.endLine()),
-                            System.lineSeparator() + statusCodeResEdits));
+                            ServiceModelGeneratorConstants.LINE_SEPARATOR + statusCodeResEdits));
                 }
                 return new CommonSourceResponse(Map.of(request.filePath(), textEdits));
             } catch (Exception e) {
@@ -411,6 +452,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the service model for the given line range.
+     *
+     * @param request Common model from source request
+     * @return {@link ServiceFromSourceResponse} of the service from source response
+     */
     @JsonRequest
     public CompletableFuture<ServiceFromSourceResponse> getServiceFromSource(CommonModelFromSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -475,14 +522,13 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
             } else {
                 updateServiceModel(serviceModel, serviceNode, semanticModel);
             }
-            List<String> listenersList = getCompatibleListeners(serviceName.get(), modulePartNode,
-                    semanticModel);
+            List<String> listenersList = getCompatibleListeners(serviceName.get(), semanticModel);
             Value listener = serviceModel.getListener();
             if (!listenersList.isEmpty()) {
-                if (serviceName.get().equals("kafka")) {
-                    listener.setValueType("SINGLE_SELECT");
+                if (serviceName.get().equals(ServiceModelGeneratorConstants.KAFKA)) {
+                    listener.setValueType(ServiceModelGeneratorConstants.SINGLE_SELECT_VALUE);
                 } else {
-                    listener.setValueType("MULTIPLE_SELECT");
+                    listener.setValueType(ServiceModelGeneratorConstants.MULTIPLE_SELECT_VALUE);
                 }
                 listener.setItems(listenersList);
             }
@@ -490,6 +536,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the listener model for the given line range.
+     *
+     * @param request Common model from source request
+     * @return {@link ListenerFromSourceResponse} of the listener from source response
+     */
     @JsonRequest
     public CompletableFuture<ListenerFromSourceResponse> getListenerFromSource(CommonModelFromSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -532,6 +584,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of triggers for a given search query.
+     *
+     * @param request Trigger list request
+     * @return {@link TriggerListResponse} of the trigger list response
+     */
     @JsonRequest
     public CompletableFuture<TriggerResponse> getTriggerModel(TriggerRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -547,6 +605,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to add a function skeleton to the given service.
+     *
+     * @param request Function source request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> addFunction(FunctionSourceRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -574,8 +638,10 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 if (!members.isEmpty()) {
                     functionLineRange = members.get(members.size() - 1).lineRange();
                 }
-                String functionNode = System.lineSeparator() + "\t" + getFunction(request.function(), new ArrayList<>())
-                        .replace(System.lineSeparator(), System.lineSeparator() + "\t");
+                String functionNode = ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t"
+                        + getFunction(request.function(), new ArrayList<>())
+                        .replace(ServiceModelGeneratorConstants.LINE_SEPARATOR,
+                                ServiceModelGeneratorConstants.LINE_SEPARATOR + "\t");
                 edits.add(new TextEdit(Utils.toRange(functionLineRange.endLine()), functionNode));
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
             } catch (Throwable e) {
@@ -584,6 +650,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to modify a function in the given service.
+     *
+     * @param request Function modifier request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> updateFunction(FunctionModifierRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -623,7 +695,8 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                     LinePosition startPos = path.get(0).lineRange().startLine();
                     LinePosition endPos = path.get(path.size() - 1).lineRange().endLine();
                     LineRange pathLineRange = LineRange.from(lineRange.fileName(), startPos, endPos);
-                    TextEdit pathEdit = new TextEdit(Utils.toRange(pathLineRange), getPath(path));
+                    TextEdit pathEdit = new TextEdit(Utils.toRange(pathLineRange),
+                            request.function().getName().getValue());
                     edits.add(pathEdit);
                 }
 
@@ -632,10 +705,11 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
                 String functionSignature = getFunctionSignature(request.function(), statusCodeResponses);
                 edits.add(new TextEdit(Utils.toRange(signatureRange), functionSignature));
                 String statusCodeResEdits = statusCodeResponses.stream()
-                        .collect(Collectors.joining(System.lineSeparator() + System.lineSeparator()));
+                        .collect(Collectors.joining(ServiceModelGeneratorConstants.LINE_SEPARATOR
+                                + ServiceModelGeneratorConstants.LINE_SEPARATOR));
                 if (!statusCodeResEdits.isEmpty()) {
                     edits.add(new TextEdit(Utils.toRange(serviceEnd.endLine()),
-                            System.lineSeparator() + statusCodeResEdits));
+                            ServiceModelGeneratorConstants.LINE_SEPARATOR + statusCodeResEdits));
                 }
 
                 return new CommonSourceResponse(Map.of(request.filePath(), edits));
@@ -645,6 +719,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to modify a service in the given module.
+     *
+     * @param request Service modifier request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> updateService(ServiceModifierRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -697,6 +777,12 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
         });
     }
 
+    /**
+     * Get the list of text edits to modify a listener in the given module.
+     *
+     * @param request Listener modifier request
+     * @return {@link CommonSourceResponse} of the common source response
+     */
     @JsonRequest
     public CompletableFuture<CommonSourceResponse> updateListener(ListenerModifierRequest request) {
         return CompletableFuture.supplyAsync(() -> {
@@ -730,16 +816,25 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     }
 
     public static Optional<String> getServiceName(ServiceDeclarationNode serviceNode, SemanticModel semanticModel) {
-        Optional<Symbol> serviceSymbol = semanticModel.symbol(serviceNode);
-        if (serviceSymbol.isEmpty() ||
-                !(serviceSymbol.get() instanceof ServiceDeclarationSymbol serviceDeclaration)) {
+        SeparatedNodeList<ExpressionNode> expressions = serviceNode.expressions();
+        if (expressions.isEmpty()) {
             return Optional.empty();
         }
-        Optional<ModuleSymbol> module = serviceDeclaration.listenerTypes().getFirst().getModule();
-        if (module.isEmpty()) {
-            return Optional.empty();
+        Optional<ModuleSymbol> module = Optional.empty();
+        ExpressionNode expressionNode = expressions.get(0);
+        if (expressionNode instanceof ExplicitNewExpressionNode explicitNewExpressionNode) {
+            Optional<Symbol> symbol = semanticModel.symbol(explicitNewExpressionNode.typeDescriptor());
+            if (symbol.isEmpty()) {
+                return Optional.empty();
+            }
+            module = symbol.get().getModule();
+        } else if (expressionNode instanceof NameReferenceNode nameReferenceNode) {
+            Optional<Symbol> symbol = semanticModel.symbol(nameReferenceNode);
+            if (symbol.isPresent() && symbol.get() instanceof VariableSymbol variableSymbol) {
+                module = variableSymbol.typeDescriptor().getModule();
+            }
         }
-        return module.get().getName();
+        return module.isEmpty() ? Optional.empty() : module.get().getName();
     }
 
     public static Optional<String> getListenerName(ListenerDeclarationNode listenerDeclarationNode,
@@ -779,7 +874,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     }
 
     private Optional<Listener> getListenerByName(String name) {
-        if (!name.equals("http") && !name.equals("graphql") &&
+        if (!name.equals(ServiceModelGeneratorConstants.HTTP) && !name.equals(ServiceModelGeneratorConstants.GRAPHQL) &&
                 triggerProperties.values().stream().noneMatch(trigger -> trigger.name().equals(name))) {
             return Optional.empty();
         }
@@ -797,7 +892,7 @@ public class ServiceModelGeneratorService implements ExtendedLanguageServerServi
     }
 
     private Optional<Service> getServiceByName(String name) {
-        if (!name.equals("http") && !name.equals("graphql") &&
+        if (!name.equals(ServiceModelGeneratorConstants.HTTP) && !name.equals(ServiceModelGeneratorConstants.GRAPHQL) &&
                 triggerProperties.values().stream().noneMatch(trigger -> trigger.name().equals(name))) {
             return Optional.empty();
         }
